--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,10 @@ $negro: #000;
     font-family: sans-serif;
 }
 
+.autoprefixer-test {
+    user-select: none;
+}
+
 body{
     background-color: $negro;
     color: white;
